# process-syn

./: .gitignore  CMakeLists.txt  README.md
scripts/: build.sh  clean.sh  run.sh
src/: CMakeLists.txt
src/client/: CMakeLists.txt  tcp_client.cpp  uds_client.cpp
src/server/: CMakeLists.txt  tcp_server.cpp  uds_server.cpp
